Updated the theme.

--- a/app/scss/theme.scss
+++ b/app/scss/theme.scss
@@ -11,6 +11,7 @@ $dark: #198754;
 // Define custom styles
 .gray-background {
   background-color: $gray-200;
+  color: $dark;
   padding-top: 10px;
   padding-bottom: 20px;
 }
