--- a/app/client/style.css
+++ b/app/client/style.css
@@ -1,9 +1,10 @@
 /* Change bootstrap variable values.
  See https://getbootstrap.com/docs/5.2/customize/css-variables/
  */
-#root {  /* CAM: why do I need to use #root instead of :root? */
+body {
   --bs-dark: #00241B;
   --bs-light-rgb: 181, 225, 255;
+  --bs-body-font-size: 20px;
 }
 
 /* Define custom styles */
