--- a/app/client/style.css
+++ b/app/client/style.css
@@ -2,7 +2,7 @@
  See https://getbootstrap.com/docs/5.2/customize/css-variables/
  */
 body {
-  --bs-body-font-size: 20px;
+  --bs-light-rgb: 236, 236, 236;
 }
 
 /* Define custom styles */
