Added some CSS variables.

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -1,17 +1,22 @@
-/* Change bootstrap variable values.
- See https://getbootstrap.com/docs/5.2/customize/css-variables/
- */
-
 /* Use Open Sans as the default sans serif font. */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,700|Source+Code+Pro:300,400,500,700");
 
+/* Set up some CSS variables to theme the application. */
+:root {
+  --matr-navbar-bg: #ECECEC;
+  --matr-navbar-bg-rgb: 236, 236, 236;
+}
+
+/* Change bootstrap variable values.
+ See https://getbootstrap.com/docs/5.2/customize/css-variables/
+ */
 body {
-  --bs-light-rgb: 236, 236, 236;
+  --bs-light-rgb: var(--matr-navbar-bg-rgb);
 }
 
 /* Define custom styles */
 .gray-background {
-  background-color: var(--bs-gray-200);
+  background-color: var(--matr-navbar-bg);
   color: var(--bs-dark);
   padding-top: 10px;
   padding-bottom: 20px;
