Cleaning up the padding and style.

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -14,6 +14,11 @@ body {
   --bs-light-rgb: var(--matr-navbar-bg-rgb);
 }
 
+/* Set the alert background on the signin and signup pages. */
+#signin-page .alert-light, #signup-page .alert-light {
+  --bs-alert-bg: var(--matr-navbar-bg);
+}
+
 /* Define custom styles */
 .gray-background {
   background-color: var(--matr-navbar-bg);
